[project]
name = "cesar-code"
version = "0.1.0"
description = "educational project for learning Python by implementing the classic Caesar cipher"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "expects>=0.9.0",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]